CREACIÓN DE LA BD EN SQLite

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-MUNDO_LETRAS/respuestas/
-MUNDO_LETRAS/__pycache__/
+MUNDO_DE_LETRAS/__pycache__/
+MUNDO_DE_LETRAS/respuestas/
+MUNDO_DE_LETRAS/reporte/reporte_actual.pdf
