Integración SQLite, eliminación de archivos .txt .json

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 MUNDO_DE_LETRAS/__pycache__/
 MUNDO_DE_LETRAS/respuestas/
 MUNDO_DE_LETRAS/reporte/reporte_actual.pdf
+MUNDO_DE_LETRAS/dist/
+MUNDO_DE_LETRAS/build/
+MUNDO_DE_LETRAS/lecturas/
+MUNDO_DE_LETRAS/preguntas/*.json
+*.bat
