--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 MUNDO_DE_LETRAS/__pycache__/
 MUNDO_DE_LETRAS/respuestas/
 MUNDO_DE_LETRAS/reporte/reporte_actual.pdf
-MUNDO_DE_LETRAS/dist/
-MUNDO_DE_LETRAS/build/
+*/dist/
+dist/
+*/build/
+build/
 MUNDO_DE_LETRAS/lecturas/
 MUNDO_DE_LETRAS/preguntas/*.json
-*.bat
