Cambios en el script compilador y archivo README

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 MUNDO_DE_LETRAS/__pycache__/
-MUNDO_DE_LETRAS/respuestas/
+MUNDO_DE_LETRAS/respuestas/*.*
 MUNDO_DE_LETRAS/reporte/reporte_actual.pdf
 */dist/
 dist/
